master cool logo

--- a/index.html
+++ b/index.html
@@ -3,6 +3,52 @@ layout: home
 title: Home
 ---
 
-<div class="home">
-  This is the homepage
+<h1>Why choose Next Door Pet Sitters?</h1>
+<div class="row">
+    <div class="col-md-6">
+        <ul class="list-group">
+          <li class="list-group-item">
+            <div class="vertical-shift">
+                <h3 class="list-group-item-heading">We come to you</h3>
+                <p class="list-group-item-text">In-home pet sitting is less stressful for your pets and eliminates dangers associated with kennels such as kennel cough.</p>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="vertical-shift">
+                <h3 class="list-group-item-heading">Peace of mind</h3>
+                <p class="list-group-item-text">We provide daily updates on your pet's well-being.</p>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="vertical-shift">
+            <h3 class="list-group-item-heading">Stay warm</h3>
+                <p class="list-group-item-text">Our dog walking services are provided all year 'round.</p>
+            </div>
+          </li>
+        </ul>
+    </div>
+    <div class="col-md-6">
+        <ul class="list-group">
+          <li class="list-group-item">
+            <div class="vertical-shift">
+                <h3 class="list-group-item-heading">Added security</h3>
+                <p class="list-group-item-text">Home visits may help deter criminal activity by keeping your home looking lived in.</p>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="vertical-shift">
+                <h3 class="list-group-item-heading">Professional service</h3>
+                <p class="list-group-item-text">We are NAPPS certified, bonded, and insured.</p>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="vertical-shift">
+                <h3 class="list-group-item-heading">We care</h3>
+                <p class="list-group-item-text">We treat each pet as if they were our own!</p>
+            </div>
+          </li>
+        </ul>
+    </div>
 </div>
+
+<a class="btn btn-primary btn-lg pull-right" href="/contact/">Request a sitter &raquo;</a>
