--- a/index.html
+++ b/index.html
@@ -50,5 +50,9 @@ title: Home
         </ul>
     </div>
 </div>
+<div class="row">
+<script id="setmore_script" type="text/javascript" src="https://my.setmore.com/js/iframe/setmore_iframe.js"></script>
+<a id="Setmore_button_iframe" class="btn btn-primary btn-lg pull-right" href="https://my.setmore.com/shortBookingPage/62b7d367-14dd-4d47-b93d-efa8b0e63d10">Request a sitter &raquo;</a>
 
-<a class="btn btn-primary btn-lg pull-right" href="/contact/">Request a sitter &raquo;</a>
+</div>
+
