add slick and lightbox

--- a/index.html
+++ b/index.html
@@ -1,6 +1,31 @@
 ---
 layout: home
 title: Home
+carousel_images:
+  - src: alex_and_clara.jpg
+    alt: Alex and Clara
+  - src: bear.jpg
+    alt: Bear
+  - src: bella4.jpg
+    alt: Bella
+  - src: bhenry.jpg
+    alt: B Henry
+  - src: boz.jpg
+    alt: Boz
+  - src: cherry.jpg
+    alt: Cherry
+  - src: Geordie.jpg
+    alt: Geordie
+  - src: Lettuce.jpg
+    alt: Lettuce
+  - src: Rico.jpg
+    alt: Rico
+  - src: Rocky.jpg
+    alt: Rocky
+  - src: sophie.jpg
+    alt: Sophie
+  - src: tillie3.jpg
+    alt: Tillie
 ---
 
 <h1>Why choose Next Door Pet Sitters?</h1>
