add caption switch

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: Home
 carousel_images:
   - src: alex_and_clara.jpg
     alt: Alex and Clara
+    caption: Alex and Clara
   - src: bear.jpg
     alt: Bear
   - src: bella4.jpg
